# lux

./: .gitattributes  .gitignore  .travis.yml  AUTHORS.md  INSTALL.md  LICENSE  Makefile  README.md  README.md.src  configure.in  include.mk.in  lux.html  vsn.mk
.github/workflows/: ci.yml
c_src/: Makefile  runpty.c
doc/: Makefile  cmd_line_opts.md  cmd_line_opts.md.src  config_params.md  config_params.md.src  debugging.md  examples.md  examples.md.src  hardening.md.src  html.header  internals.md.src  logs.md  lux.md  main_concepts.md  main_concepts.md.src  references.md  references.md.src  script_syntax.md  script_syntax.md.src  warnings.md.src
emacs/: lux-mode.el
examples/: calc.lux  dc.lux  error.lux  fail.lux  inner.luxinc  intro.lux  loop.lux  loop_fail.lux  nice.luxinc  outer.luxinc  require_fail.lux  skip.lux  test.lux  unstable.lux  warning.lux
priv/: ecover.postlux  filter_trace  luxcfg
src/: Makefile  lux.app.src  lux.erl  lux.hrl  lux_args.erl  lux_case.erl  lux_debug.erl  lux_develop.erl  lux_diff.erl  lux_html.erl  lux_html_annotate.erl  lux_html_gen.erl  lux_html_history.erl  lux_html_parse.erl  lux_html_utils.erl  lux_interpret.erl  lux_junit.erl  lux_log.erl  lux_main.erl  lux_parse.erl  lux_product.erl  lux_shell.erl  lux_suite.erl  lux_tap.erl  lux_trace.erl  lux_utils.erl
system/test/lib/lux/test/: shell_exit.lux
test/: Makefile  ambiguous_macro_error.lux  assoc_array.lux  backslash.lux  bad_fail_pattern.lux  case_timeout.lux  cleanup.lux  cleanup_double_warn_fail.lux  cleanup_fail.lux  cleanup_include.lux  cleanup_loop_fail.lux  cleanup_macro.lux  cleanup_timeout.lux  concurrent_match.lux  data.txt  doc.delux  examples.delux  exit.lux  extra_logs.lux  fast-fail.lux  goto_cleanup.lux  hangman_fail.lux  history.delux  loop.lux  loop_deep_fail.lux  loop_fail.lux  loop_fail2.lux  loop_incr.delux  loop_nested_breaks.delux  macro_debug.lux  macro_debug_body.luxinc  macro_fail.lux  macro_test.lux  merge.delux  misc.delux  missing_macro_error.lux  multi-line-tilde.lux  multi-line-val.lux  multi_line_fail.lux  multiple_empty_lines.lux  (+22 more)
test/include/: macros.luxinc
test/misc/: case_timeout.lux  cleanup_include_fail.lux  cleanup_include_inner.luxinc  cleanup_include_outer.luxinc  cleanup_loop_fail.lux  cleanup_macro.lux  cleanup_macro_fail.lux  cleanup_timeout.lux  double_exit_error.lux  exit.lux  extra_logs.lux  fail_pattern_error.lux  gobig.lux  infinity_timer.lux  loop_deep_fail.lux  loop_fail.lux  loop_fail2.lux  macro_arg_mismatch_error.lux  macro_debug.lux  macro_debug.luxinc  macro_double_def_error.lux  macro_multi_line.lux  misc.lux  misc.luxinc  multi_fail.lux  multi_line_file_var.lux  multi_line_regexp.lux  multiple_empty_lines.lux  nested_fail.lux  nested_macro_fail.lux  newline.lux  newline.txt  no_such_var_error.lux  pattern_timing.lux  premature_success.lux  shell_exit.lux  shell_killed_fail.lux  teardown_of_nested_shells_and_macros.lux  test.luxinc  unordered_output_fail.lux  (+3 more)
test/plain/: nested_fail_html.lux  nested_fail_html.luxinc
test/tutorial/: basic_infra.delux  history_demo.delux
tutorial/: INSTALL.md  Makefile  README.md  README.md.src
tutorial/chatty/: Makefile
tutorial/chatty/src/: Makefile  chatty.erl
tutorial/chatty/test/: Makefile
tutorial/chatty/test/infra/: Makefile  noise.lux  skip.lux  success.lux  unstable.lux  warning.lux
tutorial/chatty/test/intro/: Makefile  a_simple_server.delux  a_simple_server.lux  a_simple_server.luxdbg  async_startup_fail.lux  sync_startup.lux  sync_startup_cleanup.lux
tutorial/support/luxcfg/: NetBSD-macppc.luxcfg  SunOS-i86pc.luxcfg  luxcfg
tutorial/support/luxinc/: macros.luxinc
vim/ftdetect/: lux.vim
vim/syntax/: lux.vim
